--- a/src/components/herosec.css
+++ b/src/components/herosec.css
@@ -6,10 +6,10 @@
 .hero .inner {
     align-items: center;
     justify-content: flex-end;
-    min-height: calc(100vh);
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 1.5fr;
     padding-left: 50px;
+    padding-top: 65px;
 }
 .hero-image {
     max-width: 100%;
@@ -23,7 +23,7 @@
 }
 
 .hero .hero-details {
-    max-width: 500px;
+    max-width: 100%;
     width: 100%;
 }
 .hero .hero-details h1 span {
@@ -67,7 +67,6 @@
     .hero .inner {
         min-height: 100%;
         grid-template-columns: 1fr 1fr;
-        padding-top: 100px;
     }
     .hero .hero-details {
         max-width: 100%;
@@ -120,7 +119,7 @@
         gap: 15px;
     }
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 500px) {
     .hero .hero-details .btn-wrapper {
         flex-direction: column;
     }
@@ -134,4 +133,17 @@
     .hero-image {
         max-width: 200px;
     }
+}
+
+
+.page-hero .inner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 50vh;
+    padding: 0;
+}
+.page-hero .inner .hero-details{
+    text-align: center;
+    max-width: 100%;
 }
