--- a/src/components/FeaturesCardItem.css
+++ b/src/components/FeaturesCardItem.css
@@ -127,7 +127,8 @@
   }
   .FeaturesCardItem .cards__items {
     grid-template-columns: repeat(2, 1fr);
-    gap: 15px;
+    column-gap: 15px;
+    row-gap: 30px;
   }
   .FeaturesCardItem .cards__item {
     margin: 0 auto;
@@ -146,7 +147,7 @@
 @media screen and (max-width:576px) {
   .FeaturesCardItem .cards__items {
     grid-template-columns: repeat(1, 1fr);
-    row-gap: 15px;
+    row-gap: 30px;
     column-gap: 0;
   }
 }
