--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -86,24 +86,38 @@
   color: #fff;
   margin-bottom: 16px;
 }
-
-@media screen and (max-width: 820px) {
-  .footer-links {
-    padding-top: 2rem;
-  }
-
-  .footer-input {
-    width: 100%;
-  }
-
-  .footer-link-wrapper {
-    flex-direction: column;
-  }
-
-  .social-media-wrap {
-    flex-direction: column;
-  }
+.footer-menu {
+  display: flex;
+  justify-content: center;
+  padding: 0 15px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 991px) {
+  .footer-link-wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer-link-items.footer-logo {
+    max-width: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+  }
+  .footer-container {
+    padding: 50px 0;
+  }
+}
+@media screen and (max-width: 575px) {
+  .footer-menu {
+    flex-direction: column;
+  }
+  .footer-link-items {
+    align-items: center;
+    margin: 0 ;
+    text-align: center;
+    width: 100%;
+  }
+  .social-icons {
+    margin: 0;
+  }
 }
