--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -98,6 +98,63 @@
     justify-content: center;
 }
 
+.modal-header {
+    padding: 10px 20px 10px 0 !important;
+}
+.modal-header .btn-close:focus{
+    box-shadow: none !important;
+    opacity: 1 !important;
+}
+.modal-header .btn-close{
+    opacity: 1 !important;
+}
+.ProjectForm {
+    text-align: center;
+}
+.ProjectForm form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+.ProjectForm h2 {
+    font-size: 24px;
+    line-height: 30px;
+    color: #6D66ff;
+    font-weight: 600;
+}
+.ProjectForm .form-group {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+}
+.ProjectForm .form-group  input , .ProjectForm .form-group  label , .ProjectForm .form-group textarea , .ProjectForm .form-group select , .ProjectForm .form-group select option {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22px;
+    padding: 5px 5px;
+    border-radius: 5px;
+}
+.ProjectForm .form-group  input:focus-visible , .ProjectForm .form-group textarea:focus-visible{
+    border: 1px solid #6D66FF;
+}
+.ProjectForm .form-group  input , .ProjectForm .form-group textarea , .ProjectForm .form-group select{
+    width: 100%;
+    max-width: 500px;
+    outline: none;
+    border: 1px solid #888888;
+}
+.ProjectForm form .btn--primary {
+    background-color: #6D66ff;
+    color: #fff;
+    border-radius: 20px;
+    padding: 5px 20px;
+    outline: none;
+    border: none;
+    font-weight: 600;
+}
 @media screen and (max-width:991px) {
     .Projects__Cards {
         column-gap: 20px;
